[package]
name = "aoc2023-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.79"
thiserror = "1.0.56"
itertools = "0.12.0"
ndarray = "0.15.6"
num-integer = "0.1.45"
num = "0.4.1"
num-bigint = "0.4.4"
colored = "2.0.0"
simple_scan = "0.3.0"
indicatif = "0.17.7"
rand = "0.8.5"
image = "0.24"
bitflags = "2.4.1"

# we don't include regex support, not needed
[dependencies.scan_fmt]
version = "0.2.6"
default-features = false
features = ["std"]

[profile.release]
panic = 'abort'
opt-level = 2
